# rusty_win32

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md  gap-analysis.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  chore.md  docs.md  feature.md
.github/workflows/: ci.yml
docs/: CAPABILITY_ASSESSMENT.md
docs/adr/: 0001-template.md
src/: conpty.rs  console.rs  error.rs  fs.rs  handle.rs  job.rs  lib.rs  net.rs  path.rs  pipe.rs  process.rs  registry.rs  security.rs  service.rs  time.rs  volume.rs  watch.rs
